--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@
  :root {
   /* colors */
   --color-yellow: #ffea00;
+  --color-blue: #2867B8;
   --link-color: black;
   --link-hover-color: black;
   --background-color: #fff;
@@ -46,7 +47,7 @@
   --nav-height: 115px;
 
   /* buttons */
-  --button-background-color: var(--color-yellow);
+  --button-background-color: var(--color-blue);
   --button-border-radius: 0;
   --button-text-color: var(--text-color);
   --button-padding: 1em 2.5em;
