--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@
   --highlight-background-color: #ccc;
   --text-color: #202020;
   --text-color-light: #ebebeb;
+  --text-color-button: #ffffff;
   --heading-highlight-color: #ffea00;
   --overlay-text-color: var(--text-color);
   --highlight-text-color: var(--text-color);
@@ -49,7 +50,7 @@
   /* buttons */
   --button-background-color: var(--color-blue);
   --button-border-radius: 0;
-  --button-text-color: var(--text-color);
+  --button-text-color: var(--text-color-button);
   --button-padding: 1em 2.5em;
 
   /* default content */
