--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,8 +2,8 @@
     --background-color-primary: #fff;
     --label-color: #666;
     --border-color: #818a91;
-    --button-primary-color: var(--color-yellow);
-    --button-primary-hover-color: var(--color-yellow);
+    --button-primary-color: var(--color-blue);
+    --button-primary-hover-color: var(--color-blue);
     --form-font-size-m: 22px;
     --form-font-size-s: 18px;
     --form-font-size-xs: 16px;
